# sentinel-authority

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  dashboard_layout_fix.py  dashboard_upgrade.py  docker-compose.yml  e2e-test.sh  fix_scroll_final.py  fix_scroll_jump.py  merge_monitoring.py  patch_admin_experience.js  patch_applicant_experience.js  patch_certificate_pdf.js  patch_email_lifecycle.py  patch_envelo_setup.js  patch_expiry_cron.py  patch_mobile.js  patch_monitoring.js  patch_quick_actions.js  patch_state_advance.py  patch_system_types.js  patch_verification.js  railway.toml  render.yaml  repomix-output.xml  requirements.txt  systemTypesData.js
backend/: Dockerfile  add_columns.py  add_columns_simple.py  add_session_type.py  apply_main_patches.py  chat.py  config.py  database.py  fly.toml  linkedin_poster.py  main.py  middleware.py  migrate_certificate_pdf.py  migrate_email_prefs.py  migrate_envelo.py  patch_forgot_password.py  patch_security.py  requirements.txt  schemas.py  start.sh  x_poster.py
database/: init.sql  schema.sql
docs/: CUSTOMER_INTEGRATION_GUIDE.md  agent-resilience-spec.md
envelo-sdk/: README.md  install.sh  pyproject.toml  setup.py
envelo-sdk/envelo/: __init__.py  agent.py  boundaries.py  cli.py  config.py  decision_tokens.py  exceptions.py  executor_verifier.py  replay_cache.py
envelo-sdk/envelo/genie/: __init__.py
frontend/: .env.check  .gitignore  App.jsx  Dockerfile  deploy.sh  fix_app_logo.py  index.html  index.html.save  nginx.conf  package-lock.json  package.json  playwright.config.js  server.cjs  server.js  tailwind.config.js  vercel.json  vite.config.js
interlock-export/: envelo.py
mobile-app/: App.js  app.json  generate-icons.js  package-lock.json  package.json
scripts/: smoke_test.sh
website/: 404.html  404.html.backup-20260309-210541  404.html.backup-20260309-224425  404.html.backup-dot4-20260221-181349  404.html.backup-favicon-20260221-180657  404.html.backup-fix-20260221-171418  404.html.backup-globalcss-20260221-170729  404.html.backup-inline-20260221-172127  404.html.backup-institutional-20260221-170122  404.html.backup-logo-20260221-173203  404.html.backup-logocolor-20260221-180138  404.html.backup-nav-172413  404.html.backup-nav3-20260221-174423  SA_White_Paper_When_Self-Certification_Fails.pdf.bak  add_a11y_perf.py  add_chaos_preview.py  add_earth_bg.py  add_easter_egg.py  add_light_mode.py  admin-dash-preview.html  agent.html  anim_fix.py  apply.html  apply.html.backup-20260309-210541  blur_fix.py  (+288 more)
website/downloads/envelo-docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.py  pyproject.toml
website/downloads/envelo-docker/envelo/: __init__.py  actions.py  agent.py  boundaries.py  cli.py  config.py  discovery.py  exceptions.py  server.py
website/downloads/envelo-docker/envelo/genie/: engine.py
website/downloads/envelo-interlock/: pyproject.toml
(+336 files in other folders)
