[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "envelo"
version = "3.0.0"
description = "ENVELO — Enforced Non-Violable Execution-Limit Override Interlock"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24.0"]
license = {text = "Proprietary"}

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
envelo = "envelo.cli:main"

[project.urls]
Homepage = "https://sentinelauthority.org"
Portal = "https://app.sentinelauthority.org"
